--- a/Frontend/src/app/modules/workspace/share/share.component.scss
+++ b/Frontend/src/app/modules/workspace/share/share.component.scss
@@ -295,7 +295,7 @@ mat-tab-body-content{
   width: 100%;
   background: $actionDialogBackground;
   text-align: right;
-  padding: 0 3px;
+  padding: 0 3px 5px 3px;
   button{
     i{
       vertical-align: middle;
